--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -173,9 +173,24 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001290221443_AddedCustomer.cs" />
+    <Compile Include="Migrations\202001290221443_AddedCustomer.Designer.cs">
+      <DependentUpon>202001290221443_AddedCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001290224283_AddedCustomer1.cs" />
+    <Compile Include="Migrations\202001290224283_AddedCustomer1.Designer.cs">
+      <DependentUpon>202001290224283_AddedCustomer1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001290250374_AddedMemberShipType.cs" />
+    <Compile Include="Migrations\202001290250374_AddedMemberShipType.Designer.cs">
+      <DependentUpon>202001290250374_AddedMemberShipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MemberShipType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -251,6 +266,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202001290221443_AddedCustomer.resx">
+      <DependentUpon>202001290221443_AddedCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001290224283_AddedCustomer1.resx">
+      <DependentUpon>202001290224283_AddedCustomer1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001290250374_AddedMemberShipType.resx">
+      <DependentUpon>202001290250374_AddedMemberShipType.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
